ad payout process

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -2055,13 +2055,30 @@
           </td>
           <td>Aligned Delegates - Budget And Participation Requirements - AD Buffer</td>
           <td>Section</td>
-          <td>The AD Buffer is an account of USDS that begins accumulating funds when an Aligned Delegate (AD)
-            attains Prime Delegate (PD) status. The budget allocated to the AD is deposited into the AD Buffer.
-            Funds within the AD Buffer cannot be accessed or spent until they reach a minimum threshold
-            equivalent to one month's budget allocation. Once this threshold is met, the AD Buffer starts paying
-            out to the account that controls the AD Delegate Contract. ADs may use this budget for various
-            purposes, including personal compensation, compensation for team members, research expenses, and
-            other relevant activities.</td>
+          <td>The AD Buffer is an account of USDS that begins accumulating funds when an Aligned Delegate attains Prime Delegate status. 
+              The budget allocated to the AD is deposited into the AD Buffer. Funds within the AD Buffer cannot be accessed or spent until 
+              they reach a minimum threshold equivalent to one (1) month's budget allocation.
+              Once this threshold is met, the AD will receive payouts from the AD Buffer to the address that controls the AD Delegate 
+              Contract. ADs may use this budget for various purposes, including personal compensation, compensation for team members, 
+              research expenses, and other relevant activities.
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <dfn>A.1.5
+              - Aligned Delegates - Budget And Participation Requirements - AD Monthly Compensation Cycle</dfn>
+          </td>
+          <td>Aligned Delegates - Budget And Participation Requirements - AD Monthly Compensation Cycle</td>
+          <td>Core</td>
+          <td>Aligned Delegates are eligible to receive payments from their AD Buffers in a monthly compensation cycle. The Governance 
+            Facilitators are responsible for calculating the payout due to each Aligned Delegate.
+            This includes calculating:
+              1. the Aligned Delegates ranked as Prime Delegate on a daily basis;
+              2. the budget to be deposited into each Aligned Delegate's AD Buffer, which is modified pursuant to voting and communication metrics;
+              3. the balance of each Aligned Delegate’s AD Buffer; and
+              4. the amount to be paid out to each Aligned Delegate.
+            Once calculated by the Governance Facilitators, AD payouts are bundled into the next Executive Vote.
+          </td>
         </tr>
         <tr>
           <td>
@@ -2070,9 +2087,9 @@
           </td>
           <td>Aligned Delegates - Budget And Participation Requirements - AD Buffer And Loss Of Budget</td>
           <td>Section</td>
-          <td>If an AD loses its budget due to losing its Prime Delegate rank, the full contents of the AD Buffer 
-            can be paid out in the next AD compensation cycle, except as specified in <dfn>A.1.5 - Aligned Delegates - 
-            Budget And Participation Requirements - Payout Limitations For ADs Triggering Atlas Edit Weekly Cycle Proposals</dfn>.</td>
+          <td>If an AD loses its budget due to losing its Prime Delegate rank, the full contents of the AD Buffer can be paid out in the 
+              next monthly compensation cycle, except as specified in <dfn>A.1.5 - Aligned Delegates - Budget And Participation 
+              Requirements - Payout Limitations For ADs Triggering Atlas Edit Weekly Cycle Proposals</dfn>.</td>
         </tr>
         <tr>
           <td>
