--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -9199,16 +9199,32 @@
         <tr>
           <td>
             <dfn>A.5.5
-              - Accessibility Campaigns - Early Bird Bonus distribution</dfn>
+              - Accessibility Campaigns - Early Bird Reward</dfn>
           </td>
-          <td>Accessibility Campaigns - Early Bird Bonus distribution</td>
+          <td>Accessibility Campaigns - Early Bird Reward</td>
           <td>Core</td>
-          <td>Early Bird Token Rewards Distribution:• Transfer 27,222,832.8 (120% of the estimated) 
-            newly minted SKY to the following 0x14D98650d46BF7679BBD05D4f615A1547C87Bf68 
-            multisig wallet operated by Facilitator• Burn the remaining SKY in the 
-            0x14D98650d46BF7679BBD05D4f615A1547C87Bf68 multisig that is not used to fund the 
-            MerkleDistributor by calling the burn() function on the multisig, the estimated amount 
-            needed is 22,685,694</td>
+          <td>As a part of the brand reveal phase, the Accessibility Facilitators set up an Early Bird Reward System. The Early Bird 
+              Reward System rewarded all users signing up before the launch date of USDS and SKY with double the SKY rewards for the first 
+              month following launch.
+              The accumulated SKY rewards were paid out as an airdrop as specified in <dfn>A.5.5 - Accessibility Campaigns - Early Bird 
+              Reward - Token Distribution</dfn>.
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <dfn>A.5.5
+              - Accessibility Campaigns - Early Bird Reward - Token Distribution</dfn>
+          </td>
+          <td>Accessibility Campaigns - Early Bird Reward - Token Distribution</td>
+          <td>Core</td>
+          <td>To distribute the Early Bird Reward the following actions have been or will be taken:
+                - 27,222,832.8 newly minted SKY, equal to 120% of the total estimated Early Bird Reward distributions, was transferred to 
+                the multisig wallet operated by the Accessibility Facilitators at the address 0x14D98650d46BF7679BBD05D4f615A1547C87Bf68 
+                on the Ethereum Mainnet.
+                - The remaining SKY in the 0x14D98650d46BF7679BBD05D4f615A1547C87Bf68 multisig that is not used to fund the 
+                MerkleDistributor will be burned by calling the burn function on the multisig. The estimated amount of SKY needed to fund 
+                the MerkleDistributor is 22,685,694.
+          </td>
         </tr>
         <tr>
           <td>
