Adding Emergency Response System - Emergency Response - Facilitators’ Roles And Responsibilities

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -2870,6 +2870,20 @@
             Lead and Governance Facilitators. The results of fire drills shall be published to maintain transparency.
         </td>
         </tr>
+          <td>
+           <dfn>A.1.8
+              - A1 - Emergency Response System - Emergency Response - Facilitators’ Roles And Responsibilities</dfn>
+          </td>
+          <td>Emergency Response System - Emergency Response - Facilitators’ Roles And Responsibilities</td>
+          <td>Core</td>
+          <td>The Support Facilitators are empowered to declare an emergency situation, in consultation with the responsible Facilitator of 
+            the impacted Scope(s) and any relevant Scope Advisor(s).<br> After an emergency situation has been declared, the Support or 
+            Governance Facilitators are responsible for coordinating emergency-situation processes to ensure they are civil, consistently 
+            applied and aligned. The Governance Facilitators are responsible for publishing Polls and Executive Votes.<br> Any participant 
+            in the Sky Ecosystem, including Ecosystem Actors, Aligned Delegates or other community members, can request that the Support 
+            Facilitators declare an emergency. The Support Facilitators are granted broad discretion in handling such requests.
+        </td>
+        </tr>
         <tr>
           <td>
             <dfn>A.1.9
