Adding Emergency Response System - Emergency Response - Considerations Before Expediting Protocol Changes

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -2917,6 +2917,7 @@
             Lead and Governance Facilitators. The results of fire drills shall be published to maintain transparency.
         </td>
         </tr>
+        <tr>
           <td>
            <dfn>A.1.8
               - A1 - Emergency Response System - Emergency Response - Facilitators’ Roles And Responsibilities</dfn>
@@ -2929,6 +2930,19 @@
             applied and aligned. The Governance Facilitators are responsible for publishing Polls and Executive Votes.<br> Any participant 
             in the Sky Ecosystem, including Ecosystem Actors, Aligned Delegates or other community members, can request that the Support 
             Facilitators declare an emergency. The Support Facilitators are granted broad discretion in handling such requests.
+        </td>
+        </tr>
+           <tr>
+          <td>
+           <dfn>A.1.8
+              - A1 - Emergency Response System - Emergency Response - Considerations Before Expediting Protocol Changes</dfn>
+          </td>
+          <td>Emergency Response System - Emergency Response - Considerations Before Expediting Protocol Changes</td>
+          <td>Core</td>
+          <td>The Facilitators are required to consider several important factors before expediting changes to the protocol:<br> - Potential 
+            for SKY holders to miss a poll or Executive Vote due to departure from the standard governance cycles.<br> - Expedited votes may 
+            not allow for sufficient discussion, leading to a sub-optimal solution.<br> - Increased governance burden on community and increased 
+            workload for domain teams.<br> Frequent expedited votes may signal a lack of appreciation for a consistent and predictable governance process.
         </td>
         </tr>
         <tr>
