Adding Emergency Response System - Emergency Response - Incident Validation

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -2900,6 +2900,27 @@
         </tr>
         <tr>
           <td>
+           <dfn>A.1.8
+              - A1 - Emergency Response System - Emergency Response - Emergency Response Process Definition</dfn>
+          </td>
+          <td>Emergency Response System - Emergency Response - Emergency Response Process Definition</td>
+          <td>Core</td>
+          <td>The subdocuments herein define the emergency response process.
+        </td>
+        </tr>
+        <tr>
+          <td>
+           <dfn>A.1.8
+              - A1 - Emergency Response System - Emergency Response - Incident Validation</dfn>
+          </td>
+          <td>Emergency Response System - Emergency Response - Incident Validation</td>
+          <td>Core</td>
+          <td>The Support Facilitators are responsible for determining whether a reported incident is a valid emergency; where possible, this can be done 
+            in consultation with the responsible Facilitator of the impacted Scope(s) and any relevant Scope Advisor(s).
+        </td>
+        </tr>
+        <tr>
+          <td>
             <dfn>A.1.9
               - A1 - Sky Core Governance Security - General Provisions</dfn>
           </td>
