Adding Emergency Response System - Emergency Response - Emergency-Contact Mechanism Trigger

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -2966,6 +2966,20 @@
             in consultation with the responsible Facilitator of the impacted Scope(s) and any relevant Scope Advisor(s).
         </td>
         </tr>
+          <tr>
+          <td>
+           <dfn>A.1.8
+              - A1 - Emergency Response System - Emergency Response - Emergency-Contact Mechanism Trigger</dfn>
+          </td>
+          <td>Emergency Response System - Emergency Response - Emergency-Contact Mechanism Trigger</td>
+          <td>Core</td>
+          <td>Upon receiving notification from the Support Facilitators of a validated and categorized emergency situation, 
+            TechOps must trigger a notification in the Emergency Contact Mechanism specified in A.1.8 - Emergency Response 
+            System - Emergency Response - Emergency Contact Mechanism. All Emergency Response Group Members are required to 
+            acknowledge the incident in a timely manner through the Emergency Contact Mechanism. The notification must include 
+            a link to the official Emergency Response video call (”war room”).
+        </td>
+        </tr>
         <tr>
           <td>
             <dfn>A.1.9
