Adding Emergency Response System - Emergency Response - Emergency Response Video Call Coordination

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -2982,6 +2982,16 @@
         </tr>
         <tr>
           <td>
+           <dfn>A.1.8
+              - A1 - Emergency Response System - Emergency Response - Emergency Response Video Call Coordination</dfn>
+          </td>
+          <td>Emergency Response System - Emergency Response - Emergency Response Video Call Coordination</td>
+          <td>Core</td>
+          <td>Emergency Response Group Members are required to promptly join the Video Call to coordinate incident response.
+        </td>
+        </tr>
+        <tr>
+          <td>
             <dfn>A.1.9
               - A1 - Sky Core Governance Security - General Provisions</dfn>
           </td>
