Adding Emergency Response System - Emergency Response - Known And Uncontentious Remedies

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -2943,6 +2943,18 @@
           <td>Emergency Response Group Members are required to promptly join the Video Call to coordinate incident response.
         </td>
         </tr>
+         <tr>
+          <td>
+           <dfn>A.1.8
+              - A1 - Emergency Response System - Emergency Response - Known And Uncontentious Remedies</dfn>
+          </td>
+          <td>Emergency Response System - Emergency Response - Known And Uncontentious Remedies</td>
+          <td>Core</td>
+          <td>If a remedy is known and uncontentious, the Support and Governance Facilitators shall coordinate with the 
+            necessary Ecosystem Actors to expedite an Executive Vote. Emergency procedures involving an Executive Vote 
+            are defined in A.1.9 - A4 - Sky Core Governance Security - Emergency Spells.
+        </td>
+        </tr>
         <tr>
           <td>
             <dfn>A.1.9
