Adding Emergency Response System - Emergency Response - Emergency Declaration Procedure

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -3002,6 +3002,23 @@
             are defined in A.1.9 - A4 - Sky Core Governance Security - Emergency Spells.
         </td>
         </tr>
+         <tr>
+          <td>
+           <dfn>A.1.8
+              - A1 - Emergency Response System - Emergency Response - Emergency Declaration Procedure</dfn>
+          </td>
+          <td>Emergency Response System - Emergency Response - Emergency Declaration Procedure</td>
+          <td>Core</td>
+          <td>The Support Facilitators are empowered to declare an emergency situation at their discretion, either on their own 
+            initiative or in response to a request from a community member.<br> When declaring an emergency, the Support Facilitators 
+            should create a formal post on the Sky Forum which provides sufficient detail regarding the issue and explains why immediate 
+            action is required. If the situation allows, Facilitators should post the emergency declaration on the Sky Forum before 
+            taking action. If the urgency of the situation requires immediate intervention without delay, the Facilitators should create 
+            the Forum post as soon as possible after, or simultaneously with, the emergency action.<br> There may be situations in which 
+            a public Emergency Declaration would be counterproductive to security objectives; the Support Facilitators are granted discretion 
+            in these matters.<br> Creating a signal request thread or Governance Poll is optional.
+        </td>
+        </tr>
         <tr>
           <td>
             <dfn>A.1.9
