Adding Emergency Response System - Emergency Response - Record Retention

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -3021,6 +3021,21 @@
         </tr>
         <tr>
           <td>
+           <dfn>A.1.8
+              - A1 - Emergency Response System - Emergency Response - Record Retention</dfn>
+          </td>
+          <td>Emergency Response System - Emergency Response - Record Retention</td>
+          <td>Core</td>
+          <td>To achieve continuous improvement of emergency response processes, records should be retained post-incident to enable review of 
+            actions taken during the incident response. Such records may include but are not limited to:<br> 1. An incident response template filled 
+            in with information from the coordination meeting;<br> 2. Incident artifacts, including files, screenshots, documents, and links;<br> 
+            Chat transcripts from the approved communication channels specified in A.1.8 - Emergency Response System - Emergency Response - 
+            Emergency Response Communication Channels.<br> It is at the discretion of the Support Facilitators as to whether incident records can be 
+            shared with entities outside of the Emergency Response Group.
+        </td>
+        </tr>
+        <tr>
+          <td>
             <dfn>A.1.9
               - A1 - Sky Core Governance Security - General Provisions</dfn>
           </td>
