fix weeth flash loan enabled parameter

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -8506,7 +8506,7 @@
             Liquidation Bonus: 10%• Reserve Factor: 15%• Supply Cap: 61,131 weETH• Borrow Cap: N/A• Optimal
             Utilization: 45%• Isolated Debt Ceiling: $200,000,000• Base Rate: 5%• Slope 1: 15%• Slope 2: 300%•
             Reserve State: Active• Collateral: Yes• Borrowing: No• Isolated Collateral: Yes• Isolated Borrowing:
-            No• Siloed Borrowing: No• Flash Loan Enabled: Yes</td>
+            No• Siloed Borrowing: No• Flash Loan Enabled: No</td>
         </tr>
         <tr>
           <td>
