Adding Emergency Response System - Emergency Response - Accountability For Emergency Response Preparedness

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -3036,6 +3036,18 @@
         </tr>
         <tr>
           <td>
+           <dfn>A.1.8
+              - A1 - Emergency Response System - Emergency Response - Accountability For Emergency Response Preparedness</dfn>
+          </td>
+          <td>Emergency Response System - Emergency Response - Accountability For Emergency Response Preparedness</td>
+          <td>Core</td>
+          <td>Emergency preparedness is a critical priority. The Support Facilitators, in consultation with the Protocol Security Workstream Lead, 
+            must regularly evaluate the emergency preparedness of the Emergency Response Group. This can be done through running fire drills or 
+            through extensive postmortems after an actual incident.
+        </td>
+        </tr>
+        <tr>
+          <td>
             <dfn>A.1.9
               - A1 - Sky Core Governance Security - General Provisions</dfn>
           </td>
