rename max parameter to line

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -7877,7 +7877,7 @@
           <td>Measures For Endgame Transition - Spark Dai Direct Deposit Module - Current Configuration</td>
           <td>Core</td>
           <td>The current parameters of the Spark Dai Direct Deposit Module are:• gap: 40 million Dai• ttl: 24
-            hours• max: 2.5 billion Dai• buffer: 100 million Dai• tau: 7 days</td>
+            hours• line: 2.5 billion Dai• buffer: 100 million Dai• tau: 7 days</td>
         </tr>
         <tr>
           <td>
