--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -3001,6 +3001,31 @@
         </tr>
         <tr>
           <td>
+           <dfn>A.1.8
+              - A1 - Emergency Response System - Emergency Response - Accountability Measures for Ecosystem Actor Individuals And Teams</dfn>
+          </td>
+          <td>Emergency Response System - Emergency Response - Accountability Measures for Ecosystem Actor Individuals And Teams</td>
+          <td>Core</td>
+          <td>For Ecosystem Actors appointed to the Emergency Response Group, fulfilling the responsibilities of this role is as critical to 
+            their overall performance evaluation as their customary deliverables.<br> The Support Facilitators and Protocol Security Workstream 
+            Lead are required to document all instances of Emergency Response Group Members’ failure to meet emergency-preparedness requirements. 
+            Given their domain expertise and proximity to each emergency situation, the Support Facilitators and Protocol Security Workstream Lead 
+            are granted the discretion to evaluate emergency-preparedness deficiencies. Generally, they are required to take swift action to address 
+            non-negligible emergency-preparedness deficiencies in the following manner.<br> If the deficient Emergency Response Group Member is an 
+            Ecosystem Actor individual, the individual should be removed from the Group.<br> If the deficient Emergency Response Group Member is part 
+            of an Ecosystem Actor team, the specific member who has failed to meet requirements should be removed from the Group.<br> If different 
+            Emergency Response Group Members from the same Ecosystem Actor team consistently fail to meet requirements, the Ecosystem Actor team as 
+            a whole should be removed from the Group.<br> The removal of a Member from the Group is done at the discretion of the Support Facilitators 
+            and the Protocol Security Workstream Lead. However, the Support Facilitators and Protocol Security Workstream Lead may not proceed with 
+            removal unless it is supported with clear documentation. Such documentation must be made available to all Emergency Response Group 
+            Members for review.<br> When an Ecosystem Actor is removed from the Emergency Response Group for deficient performance, the Support Facilitators
+            must transparently announce this action via a post to the Sky Forum. Further, the removal must be incorporated into the evaluation of the Ecosystem 
+            Actor’s overall performance.<br> The Support Facilitators has the discretion to decide if documentation supporting the removal should be retained 
+            internally or publicly shared on the Forum (with redactions, if needed).
+        </td>
+        </tr>
+        <tr>
+          <td>
             <dfn>A.1.9
               - A1 - Sky Core Governance Security - General Provisions</dfn>
           </td>
