Adding Emergency Response System - Emergency Response - Accountability Measures For Alignment Conservers

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -3026,6 +3026,31 @@
         </tr>
         <tr>
           <td>
+           <dfn>A.1.8
+              - A1 - Emergency Response System - Emergency Response - Accountability Measures For Alignment Conservers</dfn>
+          </td>
+          <td>Emergency Response System - Emergency Response - Accountability Measures For Alignment Conservers</td>
+          <td>Core</td>
+          <td>For an Alignment Conserver who has been appointed to the Emergency Response Group, the requirements of this role become as critical to the assessment 
+            of their overall performance as their customary obligations.<br> The Support Facilitators and Protocol Security Workstream Lead are required to document 
+            all instances of Emergency Response Group Members’ failure to meet emergency-preparedness requirements. Given their domain expertise and proximity to each 
+            emergency situation, the Support Facilitators and Protocol Security Workstream Lead are granted the discretion to evaluate emergency-preparedness 
+            deficiencies. Generally, they are required to take swift action to address non-negligible emergency-preparedness deficiencies in the following manner.<br> 
+            Where the deficient Member is an Alignment Conserver, that Member should be derecognized pursuant to A.1.4 - Alignment Conservers - Accountability And 
+            Misalignment Handling - Adjudication Process.<br> Where the deficient Alignment Conserver is the Support Facilitators, the Protocol Security Workstream Lead 
+            and a majority of active Scope Facilitators must reach consensus in order to initiate a derecognition proceeding against the Support Facilitators. Once this 
+            threshold is met, the procedure defined in A.1.4 - Alignment Conservers - Accountability And Misalignment Handling - Adjudication Process should be followed. 
+            In the interim, other Scope Facilitators must step in temporarily to coordinate emergency response.<br> The initiation of derecognition is done at the discretion 
+            of the Support Facilitators (or other Scope Facilitator) and the Protocol Security Workstream Lead. However, the Support Facilitators and Protocol Security 
+            Workstream Lead may not proceed with removal unless it is supported with clear documentation. Such documentation must be made available to all Emergency Response 
+            Group Members for review.<br> When an Alignment Conserver is removed from the Emergency Response Group and derecognized for deficient performance, the Governance 
+            Facilitators must transparently announce this action pursuant to A.1.4 - Alignment Conservers - Accountability And Misalignment Handling - Derecognition Notice.<br> 
+            The Support Facilitators have the discretion to decide if documentation supporting the Alignment Conserver’s derecognition and removal should be retained internally 
+            or publicly shared on the Forum (with redactions, if needed).
+        </td>
+        </tr>
+        <tr>
+          <td>
             <dfn>A.1.9
               - A1 - Sky Core Governance Security - General Provisions</dfn>
           </td>
