aligned delegate budget and participation requirements

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -2133,8 +2133,9 @@
           <td>
             A Prime Delegate's allocated budget can be reduced if they do not fully comply with the
             participation requirements defined in this Article at <dfn>A.1.5
-              - Aligned Delegates - Budget And Participation Requirements - Voting-Activity Metrics</dfn> and <dfn>A.1.5
-              - Aligned Delegates - Budget And Participation Requirements - Voting-Communication Metrics</dfn>.
+              - Aligned Delegates - Budget And Participation Requirements - Voting-Activity Metrics</dfn>, <dfn>A.1.5
+              - Aligned Delegates - Budget And Participation Requirements - Voting-Communication Metrics</dfn>, and <dfn>A.1.5
+              - Aligned Delegates - Budget And Participation Requirements - Emergency Communications Requirement</dfn>.
           </td>
         </tr>
         <tr>
@@ -2175,6 +2176,36 @@
             next highest-ranking AD, as determined by total amount of SKY delegated to their Seasonally Active
             Delegate Contract.</td>
         </tr>
+        <tr>
+          <td>
+            <dfn>A.1.5
+              - Aligned Delegates - Budget And Participation Requirements - Emergency Communications Requirement</dfn>
+          </td>
+          <td>Aligned Delegates - Budget And Participation Requirements - Emergency Communications Requirement</td>
+          <td>Section</td>
+          <td>The budget stream allocated to a Prime Delegate (PD) is modified based on their correct usage of required tools for 
+              emergency communications.
+              Should a PD fail to correctly use the required communications tools, they become completely ineligible to receive PD income. 
+              Their PD rank, and the budget eligibility associated with that rank, is transferred to the next highest-ranking AD, as 
+              determined by total amount of SKY delegated to their Seasonally Active Delegate Contract.</td>
+        </tr>
+        <tr>
+          <td>
+            <dfn>A.1.5
+              - Aligned Delegates - Budget And Participation Requirements - Signal Account Requirement</dfn>
+          </td>
+          <td>Aligned Delegates - Budget And Participation Requirements - Signal Account Requirement</td>
+          <td>Core</td>
+          <td>PDs are required to maintain an active Signal account to facilitate communications related to emergency / urgent situations. 
+              This requirement applies regardless of whether a PD has been appointed to the Emergency Response Group. See <dfn>A.1.8 - 
+              Emergency Response System - Emergency Response - Emergency Response Signal Group</dfn>. PDs must provide their Signal 
+              username to the Governance Facilitators.
+              The Governance Facilitators are responsible for maintaining an internal registry of PDs’ Signal accounts. Because the ranked 
+              PDs are continually changing, the Governance Facilitators must ensure that the internal registry is maintained on a frequent 
+              basis. The Governance Facilitators must check the active status of the PDs’ Signal accounts by sending test messages and 
+              confirming the PDs’ timely response; this must be done regularly, on a schedule known only to the Governance Facilitators. 
+              If a PD fails to timely respond to the test messages, the Governance Facilitators must remove them from PD status.</td>
+        </tr>        
         <tr>
           <td>
             <dfn>A.1.5
