--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -9157,10 +9157,10 @@
           <td>Accessibility Campaigns - Early Bird Reward - Token Distribution</td>
           <td>Core</td>
           <td>To distribute the Early Bird Reward the following actions have been or will be taken:
-                - 27,222,832.8 newly minted SKY, equal to 120% of the total estimated Early Bird Reward distributions, was transferred to 
+                • 27,222,832.8 newly minted SKY, equal to 120% of the total estimated Early Bird Reward distributions, was transferred to 
                 the multisig wallet operated by the Accessibility Facilitators at the address 0x14D98650d46BF7679BBD05D4f615A1547C87Bf68 
                 on the Ethereum Mainnet.
-                - The remaining SKY in the 0x14D98650d46BF7679BBD05D4f615A1547C87Bf68 multisig that is not used to fund the 
+                • The remaining SKY in the 0x14D98650d46BF7679BBD05D4f615A1547C87Bf68 multisig that is not used to fund the 
                 MerkleDistributor will be burned by calling the burn function on the multisig. The estimated amount of SKY needed to fund 
                 the MerkleDistributor is 22,685,694.
           </td>
