--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -548,9 +548,9 @@
           <td>
             <dfn>A.5.3</dfn>
           </td>
-          <td>Accessibility Reward</td>
+          <td>Integrator Program</td>
           <td>Article</td>
-          <td>This Article defines an Accessibility Reward System to incentivize third-party frontends and Stars to attract USDS users, Sky Savings Rate (SSR) users, and Star users.</td>
+          <td>This Article defines an Integrator Program to incentivize third-party frontends and Stars to attract USDS users, Sky Savings Rate (SSR) users, and Star users.</td>
         </tr>
         <tr>
           <td>
