--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -9126,9 +9126,9 @@
           <td>Integrator Program - Accessibility Reward System - Onchain and Offchain Accessibility Reward Code Marking</td>
           <td>Core</td>
           <td>The Accessibility Reward Codes can be marked to a balance both through onchain and offchain processes.
-              - Onchain means they are directly included in the users’ transactions so they can be read on-chain, through a special 
+              • Onchain means they are directly included in the users’ transactions so they can be read on-chain, through a special 
                 signature on the token transfer method.
-              - Offchain means that various, continuously updated offchain monitoring mechanisms can be used to prove that an Integrator’s 
+              • Offchain means that various, continuously updated offchain monitoring mechanisms can be used to prove that an Integrator’s 
                 Accessibility Reward Code is connected to particular accounts and balances, such as their user balances or customer funds.
             </td>
         </tr>
@@ -9142,12 +9142,12 @@
           <td>On an interim basis, two Ecosystem Actors have the ability to generate Accessibility Reward Codes for Integrators. Their 
               Accessibility Reward Codes will work in two different ways, as specified below.
               Phoenix Labs:
-                - Accessibility Reward Codes from Phoenix Labs provide the 0.4% or [Savings Rate - 0.2%] Marketing Fee as normal.
-                - Additionally, the Spark Star also earns a 0.1% Management Fee on balances marked by Phoenix Labs’ Accessibility Reward Codes.
-                - Phoenix Labs Forum account: PhoenixLabs
+                • Accessibility Reward Codes from Phoenix Labs provide the 0.4% or [Savings Rate - 0.2%] Marketing Fee as normal.
+                • Additionally, the Spark Star also earns a 0.1% Management Fee on balances marked by Phoenix Labs’ Accessibility Reward Codes.
+                • Phoenix Labs Forum account: PhoenixLabs
               Viridian Advisors:
-                - Accessibility Reward Codes from Viridian Advisors provide the 0.4% or [Savings Rate - 0.2%] Marketing Fee as normal.
-                - Viridian Advisory Forum account: Viridian</td>
+                • Accessibility Reward Codes from Viridian Advisors provide the 0.4% or [Savings Rate - 0.2%] Marketing Fee as normal.
+                • Viridian Advisory Forum account: Viridian</td>
         </tr>
         <tr>
           <td>
