--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -2752,7 +2752,7 @@
               <tr>
           <td>
             <dfn>A.1.8
-              - A1 - Emergency Response System - Emergency Response - Definition Of Emergency Situations</dfn>
+              - Emergency Response System - Emergency Response - Definition Of Emergency Situations</dfn>
           </td>
           <td>Emergency Response System - Emergency Response - Definition Of Emergency Situations</td>
           <td>Core</td>
@@ -2768,7 +2768,7 @@
           <tr>
           <td>
             <dfn>A.1.8
-              - A1 - Emergency Response System - Emergency Response - Emergency Response Group</dfn>
+              - Emergency Response System - Emergency Response - Emergency Response Group</dfn>
           </td>
           <td>Emergency Response System - Emergency Response - Emergency Response Group</td>
           <td>Core</td>
@@ -2781,7 +2781,7 @@
         <tr>
           <td>
            <dfn>A.1.8
-              - A1 - Emergency Response System - Emergency Response - Emergency Response Group Membership Criteria</dfn>
+              - Emergency Response System - Emergency Response - Emergency Response Group Membership Criteria</dfn>
           </td>
           <td>Emergency Response System - Emergency Response - Emergency Response Group Membership Criteria</td>
           <td>Core</td>
@@ -2794,7 +2794,7 @@
           <tr>
           <td>
            <dfn>A.1.8
-              - A1 - Emergency Response System - Emergency Response - Emergency Response Group Membership</dfn>
+              - Emergency Response System - Emergency Response - Emergency Response Group Membership</dfn>
           </td>
           <td>Emergency Response System - Emergency Response - Emergency Response Group Membership</td>
           <td>Active Data Controller</td>
@@ -2806,7 +2806,7 @@
         <tr>
           <td>
            <dfn>A.1.8
-              - A1 - Emergency Response System - Emergency Response - Emergency Response Group Current Membership</dfn>
+              - Emergency Response System - Emergency Response - Emergency Response Group Current Membership</dfn>
           </td>
           <td>Emergency Response System - Emergency Response - Emergency Response Group Current Membership</td>
           <td>Active Data Controller</td>
@@ -2818,7 +2818,7 @@
           <tr>
           <td>
            <dfn>A.1.8
-              - A1 - Emergency Response System - Emergency Response - Emergency Response Group Team Members</dfn>
+              - Emergency Response System - Emergency Response - Emergency Response Group Team Members</dfn>
           </td>
           <td>Emergency Response System - Emergency Response - Emergency Response Group Team Members</td>
           <td>Core</td>
@@ -2832,7 +2832,7 @@
         <tr>
           <td>
             <dfn>A.1.8
-              - A1 - Emergency Response System - Emergency Response - Ecosystem Actor Embedding</dfn>
+             - Emergency Response System - Emergency Response - Ecosystem Actor Embedding</dfn>
           </td>
           <td>Emergency Response System - Emergency Response - Ecosystem Actor Embedding</td>
           <td>Core</td>
@@ -2845,7 +2845,7 @@
           <tr>
           <td>
            <dfn>A.1.8
-              - A1 - Emergency Response System - Emergency Response - Emergency Response Communication Channels</dfn>
+              - Emergency Response System - Emergency Response - Emergency Response Communication Channels</dfn>
           </td>
           <td>Emergency Response System - Emergency Response - Emergency Response Communication Channels</td>
           <td>Core</td>
@@ -2855,7 +2855,7 @@
         <tr>
           <td>
             <dfn>A.1.8
-              - A1 - Emergency Response System - Emergency Response - Emergency Response Signal Group</dfn>
+              - Emergency Response System - Emergency Response - Emergency Response Signal Group</dfn>
           </td>
           <td>Emergency Response System - Emergency Response - Emergency Response Signal Group</td>
           <td>Core</td>
@@ -2871,7 +2871,7 @@
         <tr>
           <td>
            <dfn>A.1.8
-              - A1 - Emergency Response System - Emergency Response - Emergency Contact Mechanism Selection Criteria</dfn>
+              - Emergency Response System - Emergency Response - Emergency Contact Mechanism Selection Criteria</dfn>
           </td>
           <td>Emergency Response System - Emergency Response - Emergency Contact Mechanism Selection Criteria</td>
           <td>Core</td>
@@ -2886,7 +2886,7 @@
         <tr>
           <td>
             <dfn>A.1.8
-              - A1 - Emergency Response System - Emergency Response - Approved Emergency Contact Mechanisms</dfn>
+              - Emergency Response System - Emergency Response - Approved Emergency Contact Mechanisms</dfn>
           </td>
           <td>Emergency Response System - Emergency Response - Approved Emergency Contact Mechanisms</td>
           <td>Core</td>
@@ -2896,7 +2896,7 @@
           <tr>
           <td>
            <dfn>A.1.8
-              - A1 - Emergency Response System - Emergency Response - Changes To Approved Emergency Contact Mechanisms</dfn>
+              - Emergency Response System - Emergency Response - Changes To Approved Emergency Contact Mechanisms</dfn>
           </td>
           <td>Emergency Response System - Emergency Response - Changes To Approved Emergency Contact Mechanisms</td>
           <td>Core</td>
@@ -2908,7 +2908,7 @@
         <tr>
           <td>
            <dfn>A.1.8
-              - A1 - Emergency Response System - Emergency Response - Emergency Contact Mechanism Fire Drills</dfn>
+              - Emergency Response System - Emergency Response - Emergency Contact Mechanism Fire Drills</dfn>
           </td>
           <td>Emergency Response System - Emergency Response - Emergency Contact Mechanism Fire Drills</td>
           <td>Core</td>
@@ -2920,7 +2920,7 @@
         <tr>
           <td>
            <dfn>A.1.8
-              - A1 - Emergency Response System - Emergency Response - Facilitators’ Roles And Responsibilities</dfn>
+              - Emergency Response System - Emergency Response - Facilitators’ Roles And Responsibilities</dfn>
           </td>
           <td>Emergency Response System - Emergency Response - Facilitators’ Roles And Responsibilities</td>
           <td>Core</td>
@@ -2935,7 +2935,7 @@
            <tr>
           <td>
            <dfn>A.1.8
-              - A1 - Emergency Response System - Emergency Response - Considerations Before Expediting Protocol Changes</dfn>
+              - Emergency Response System - Emergency Response - Considerations Before Expediting Protocol Changes</dfn>
           </td>
           <td>Emergency Response System - Emergency Response - Considerations Before Expediting Protocol Changes</td>
           <td>Core</td>
@@ -2948,7 +2948,7 @@
         <tr>
           <td>
            <dfn>A.1.8
-              - A1 - Emergency Response System - Emergency Response - Emergency Response Process Definition</dfn>
+              - Emergency Response System - Emergency Response - Emergency Response Process Definition</dfn>
           </td>
           <td>Emergency Response System - Emergency Response - Emergency Response Process Definition</td>
           <td>Core</td>
@@ -2958,7 +2958,7 @@
         <tr>
           <td>
            <dfn>A.1.8
-              - A1 - Emergency Response System - Emergency Response - Incident Validation</dfn>
+              - Emergency Response System - Emergency Response - Incident Validation</dfn>
           </td>
           <td>Emergency Response System - Emergency Response - Incident Validation</td>
           <td>Core</td>
@@ -2969,7 +2969,7 @@
           <tr>
           <td>
            <dfn>A.1.8
-              - A1 - Emergency Response System - Emergency Response - Emergency-Contact Mechanism Trigger</dfn>
+              - Emergency Response System - Emergency Response - Emergency-Contact Mechanism Trigger</dfn>
           </td>
           <td>Emergency Response System - Emergency Response - Emergency-Contact Mechanism Trigger</td>
           <td>Core</td>
@@ -2983,7 +2983,7 @@
         <tr>
           <td>
            <dfn>A.1.8
-              - A1 - Emergency Response System - Emergency Response - Emergency Response Video Call Coordination</dfn>
+              - Emergency Response System - Emergency Response - Emergency Response Video Call Coordination</dfn>
           </td>
           <td>Emergency Response System - Emergency Response - Emergency Response Video Call Coordination</td>
           <td>Core</td>
@@ -2993,7 +2993,7 @@
          <tr>
           <td>
            <dfn>A.1.8
-              - A1 - Emergency Response System - Emergency Response - Known And Uncontentious Remedies</dfn>
+              - Emergency Response System - Emergency Response - Known And Uncontentious Remedies</dfn>
           </td>
           <td>Emergency Response System - Emergency Response - Known And Uncontentious Remedies</td>
           <td>Core</td>
@@ -3005,7 +3005,7 @@
          <tr>
           <td>
            <dfn>A.1.8
-              - A1 - Emergency Response System - Emergency Response - Emergency Declaration Procedure</dfn>
+              - Emergency Response System - Emergency Response - Emergency Declaration Procedure</dfn>
           </td>
           <td>Emergency Response System - Emergency Response - Emergency Declaration Procedure</td>
           <td>Core</td>
@@ -3022,7 +3022,7 @@
         <tr>
           <td>
            <dfn>A.1.8
-              - A1 - Emergency Response System - Emergency Response - Record Retention</dfn>
+              - Emergency Response System - Emergency Response - Record Retention</dfn>
           </td>
           <td>Emergency Response System - Emergency Response - Record Retention</td>
           <td>Core</td>
@@ -3037,7 +3037,7 @@
         <tr>
           <td>
            <dfn>A.1.8
-              - A1 - Emergency Response System - Emergency Response - Accountability For Emergency Response Preparedness</dfn>
+             - Emergency Response System - Emergency Response - Accountability For Emergency Response Preparedness</dfn>
           </td>
           <td>Emergency Response System - Emergency Response - Accountability For Emergency Response Preparedness</td>
           <td>Core</td>
@@ -3049,7 +3049,7 @@
         <tr>
           <td>
            <dfn>A.1.8
-              - A1 - Emergency Response System - Emergency Response - Accountability Measures for Ecosystem Actor Individuals And Teams</dfn>
+              - Emergency Response System - Emergency Response - Accountability Measures for Ecosystem Actor Individuals And Teams</dfn>
           </td>
           <td>Emergency Response System - Emergency Response - Accountability Measures for Ecosystem Actor Individuals And Teams</td>
           <td>Core</td>
@@ -3074,7 +3074,7 @@
         <tr>
           <td>
            <dfn>A.1.8
-              - A1 - Emergency Response System - Emergency Response - Accountability Measures For Alignment Conservers</dfn>
+              - Emergency Response System - Emergency Response - Accountability Measures For Alignment Conservers</dfn>
           </td>
           <td>Emergency Response System - Emergency Response - Accountability Measures For Alignment Conservers</td>
           <td>Core</td>
