Adding Emergency Contact Mechanism

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -2868,6 +2868,17 @@
             The Group must be configured to have a four-week message retention.
         </td>
         </tr>
+         <tr>
+          <td>
+           <dfn>A.1.8
+              - Emergency Response System - Emergency Response - Emergency Contact Mechanism</dfn>
+          </td>
+          <td>Emergency Response System - Emergency Response - Emergency Contact Mechanism</td>
+          <td>Core</td>
+          <td>Emergency Response Group Members must use an emergency contact mechanism to deal with emergencies. 
+            This emergency contact mechanism is selected and validated by the Protocol Security Workstream Lead.
+        </td>
+        </tr>
         <tr>
           <td>
            <dfn>A.1.8
