Adding Emergency Response System - Emergency Response - Incident Categorization

--- a/Sky Atlas/Sky Atlas.html
+++ b/Sky Atlas/Sky Atlas.html
@@ -2977,6 +2977,16 @@
             in consultation with the responsible Facilitator of the impacted Scope(s) and any relevant Scope Advisor(s).
         </td>
         </tr>
+        <tr>
+          <td>
+           <dfn>A.1.8
+              - Emergency Response System - Emergency Response - Incident Categorization</dfn>
+          </td>
+          <td>Emergency Response System - Emergency Response - Incident Categorization</td>
+          <td>Core</td>
+          <td>The Support Facilitators are responsible for categorizing emergencies according to their severity and other pertinent criteria.
+        </td>
+        </tr>
           <tr>
           <td>
            <dfn>A.1.8
